--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
 
     <string name="roster_list_title">Rosters</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="edit_roster_label">Edit roster</string>
 </resources>
